// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document with empty text 1`] = `
Object {
  "docs": Map {
    1 => Object {
      "fieldLengths": Array [
        0,
      ],
      "key": 1,
    },
  },
  "fields": Array [
    Object {
      "avg": 0,
      "sum": 0,
    },
  ],
  "root": Object {
    "charCode": 0,
    "firstChild": null,
    "firstDoc": null,
    "next": null,
  },
}
`;

exports[`document with multiple fields 1`] = `
Object {
  "docs": Map {
    1 => Object {
      "fieldLengths": Array [
        3,
        3,
      ],
      "key": 1,
    },
  },
  "fields": Array [
    Object {
      "avg": 3,
      "sum": 3,
    },
    Object {
      "avg": 3,
      "sum": 3,
    },
  ],
  "root": Object {
    "charCode": 0,
    "firstChild": Object {
      "charCode": 101,
      "firstChild": null,
      "firstDoc": Object {
        "details": Object {
          "fieldLengths": Array [
            3,
            3,
          ],
          "key": 1,
        },
        "next": null,
        "termFrequency": Array [
          0,
          1,
        ],
      },
      "next": Object {
        "charCode": 100,
        "firstChild": null,
        "firstDoc": Object {
          "details": Object {
            "fieldLengths": Array [
              3,
              3,
            ],
            "key": 1,
          },
          "next": null,
          "termFrequency": Array [
            0,
            1,
          ],
        },
        "next": Object {
          "charCode": 99,
          "firstChild": null,
          "firstDoc": Object {
            "details": Object {
              "fieldLengths": Array [
                3,
                3,
              ],
              "key": 1,
            },
            "next": null,
            "termFrequency": Array [
              1,
              1,
            ],
          },
          "next": Object {
            "charCode": 98,
            "firstChild": null,
            "firstDoc": Object {
              "details": Object {
                "fieldLengths": Array [
                  3,
                  3,
                ],
                "key": 1,
              },
              "next": null,
              "termFrequency": Array [
                1,
                0,
              ],
            },
            "next": Object {
              "charCode": 97,
              "firstChild": null,
              "firstDoc": Object {
                "details": Object {
                  "fieldLengths": Array [
                    3,
                    3,
                  ],
                  "key": 1,
                },
                "next": null,
                "termFrequency": Array [
                  1,
                  0,
                ],
              },
              "next": null,
            },
          },
        },
      },
    },
    "firstDoc": null,
    "next": null,
  },
}
`;

exports[`document with object key 1`] = `
Object {
  "docs": Map {
    Object {
      "id": 1,
      "text1": "a b c",
    } => Object {
      "fieldLengths": Array [
        3,
        0,
      ],
      "key": Object {
        "id": 1,
        "text1": "a b c",
      },
    },
  },
  "fields": Array [
    Object {
      "avg": 3,
      "sum": 3,
    },
    Object {
      "avg": 0,
      "sum": 0,
    },
  ],
  "root": Object {
    "charCode": 0,
    "firstChild": Object {
      "charCode": 99,
      "firstChild": null,
      "firstDoc": Object {
        "details": Object {
          "fieldLengths": Array [
            3,
            0,
          ],
          "key": Object {
            "id": 1,
            "text1": "a b c",
          },
        },
        "next": null,
        "termFrequency": Array [
          1,
          0,
        ],
      },
      "next": Object {
        "charCode": 98,
        "firstChild": null,
        "firstDoc": Object {
          "details": Object {
            "fieldLengths": Array [
              3,
              0,
            ],
            "key": Object {
              "id": 1,
              "text1": "a b c",
            },
          },
          "next": null,
          "termFrequency": Array [
            1,
            0,
          ],
        },
        "next": Object {
          "charCode": 97,
          "firstChild": null,
          "firstDoc": Object {
            "details": Object {
              "fieldLengths": Array [
                3,
                0,
              ],
              "key": Object {
                "id": 1,
                "text1": "a b c",
              },
            },
            "next": null,
            "termFrequency": Array [
              1,
              0,
            ],
          },
          "next": null,
        },
      },
    },
    "firstDoc": null,
    "next": null,
  },
}
`;

exports[`document with unavailable field 1`] = `
Object {
  "docs": Map {
    1 => Object {
      "fieldLengths": Array [
        3,
        0,
      ],
      "key": 1,
    },
  },
  "fields": Array [
    Object {
      "avg": 3,
      "sum": 3,
    },
    Object {
      "avg": 0,
      "sum": 0,
    },
  ],
  "root": Object {
    "charCode": 0,
    "firstChild": Object {
      "charCode": 99,
      "firstChild": null,
      "firstDoc": Object {
        "details": Object {
          "fieldLengths": Array [
            3,
            0,
          ],
          "key": 1,
        },
        "next": null,
        "termFrequency": Array [
          1,
          0,
        ],
      },
      "next": Object {
        "charCode": 98,
        "firstChild": null,
        "firstDoc": Object {
          "details": Object {
            "fieldLengths": Array [
              3,
              0,
            ],
            "key": 1,
          },
          "next": null,
          "termFrequency": Array [
            1,
            0,
          ],
        },
        "next": Object {
          "charCode": 97,
          "firstChild": null,
          "firstDoc": Object {
            "details": Object {
              "fieldLengths": Array [
                3,
                0,
              ],
              "key": 1,
            },
            "next": null,
            "termFrequency": Array [
              1,
              0,
            ],
          },
          "next": null,
        },
      },
    },
    "firstDoc": null,
    "next": null,
  },
}
`;

exports[`one document with three terms 1`] = `
Object {
  "docs": Map {
    1 => Object {
      "fieldLengths": Array [
        3,
      ],
      "key": 1,
    },
  },
  "fields": Array [
    Object {
      "avg": 3,
      "sum": 3,
    },
  ],
  "root": Object {
    "charCode": 0,
    "firstChild": Object {
      "charCode": 99,
      "firstChild": null,
      "firstDoc": Object {
        "details": Object {
          "fieldLengths": Array [
            3,
          ],
          "key": 1,
        },
        "next": null,
        "termFrequency": Array [
          1,
        ],
      },
      "next": Object {
        "charCode": 98,
        "firstChild": null,
        "firstDoc": Object {
          "details": Object {
            "fieldLengths": Array [
              3,
            ],
            "key": 1,
          },
          "next": null,
          "termFrequency": Array [
            1,
          ],
        },
        "next": Object {
          "charCode": 97,
          "firstChild": null,
          "firstDoc": Object {
            "details": Object {
              "fieldLengths": Array [
                3,
              ],
              "key": 1,
            },
            "next": null,
            "termFrequency": Array [
              1,
            ],
          },
          "next": null,
        },
      },
    },
    "firstDoc": null,
    "next": null,
  },
}
`;

exports[`two documents with different terms 1`] = `
Object {
  "docs": Map {
    1 => Object {
      "fieldLengths": Array [
        3,
      ],
      "key": 1,
    },
    2 => Object {
      "fieldLengths": Array [
        3,
      ],
      "key": 2,
    },
  },
  "fields": Array [
    Object {
      "avg": 3,
      "sum": 6,
    },
  ],
  "root": Object {
    "charCode": 0,
    "firstChild": Object {
      "charCode": 102,
      "firstChild": null,
      "firstDoc": Object {
        "details": Object {
          "fieldLengths": Array [
            3,
          ],
          "key": 2,
        },
        "next": null,
        "termFrequency": Array [
          1,
        ],
      },
      "next": Object {
        "charCode": 101,
        "firstChild": null,
        "firstDoc": Object {
          "details": Object {
            "fieldLengths": Array [
              3,
            ],
            "key": 2,
          },
          "next": null,
          "termFrequency": Array [
            1,
          ],
        },
        "next": Object {
          "charCode": 100,
          "firstChild": null,
          "firstDoc": Object {
            "details": Object {
              "fieldLengths": Array [
                3,
              ],
              "key": 2,
            },
            "next": null,
            "termFrequency": Array [
              1,
            ],
          },
          "next": Object {
            "charCode": 99,
            "firstChild": null,
            "firstDoc": Object {
              "details": Object {
                "fieldLengths": Array [
                  3,
                ],
                "key": 1,
              },
              "next": null,
              "termFrequency": Array [
                1,
              ],
            },
            "next": Object {
              "charCode": 98,
              "firstChild": null,
              "firstDoc": Object {
                "details": Object {
                  "fieldLengths": Array [
                    3,
                  ],
                  "key": 1,
                },
                "next": null,
                "termFrequency": Array [
                  1,
                ],
              },
              "next": Object {
                "charCode": 97,
                "firstChild": null,
                "firstDoc": Object {
                  "details": Object {
                    "fieldLengths": Array [
                      3,
                    ],
                    "key": 1,
                  },
                  "next": null,
                  "termFrequency": Array [
                    1,
                  ],
                },
                "next": null,
              },
            },
          },
        },
      },
    },
    "firstDoc": null,
    "next": null,
  },
}
`;

exports[`two documents with shared terms 1`] = `
Object {
  "docs": Map {
    1 => Object {
      "fieldLengths": Array [
        3,
      ],
      "key": 1,
    },
    2 => Object {
      "fieldLengths": Array [
        3,
      ],
      "key": 2,
    },
  },
  "fields": Array [
    Object {
      "avg": 3,
      "sum": 6,
    },
  ],
  "root": Object {
    "charCode": 0,
    "firstChild": Object {
      "charCode": 100,
      "firstChild": null,
      "firstDoc": Object {
        "details": Object {
          "fieldLengths": Array [
            3,
          ],
          "key": 2,
        },
        "next": null,
        "termFrequency": Array [
          1,
        ],
      },
      "next": Object {
        "charCode": 99,
        "firstChild": null,
        "firstDoc": Object {
          "details": Object {
            "fieldLengths": Array [
              3,
            ],
            "key": 2,
          },
          "next": Object {
            "details": Object {
              "fieldLengths": Array [
                3,
              ],
              "key": 1,
            },
            "next": null,
            "termFrequency": Array [
              1,
            ],
          },
          "termFrequency": Array [
            1,
          ],
        },
        "next": Object {
          "charCode": 98,
          "firstChild": null,
          "firstDoc": Object {
            "details": Object {
              "fieldLengths": Array [
                3,
              ],
              "key": 2,
            },
            "next": Object {
              "details": Object {
                "fieldLengths": Array [
                  3,
                ],
                "key": 1,
              },
              "next": null,
              "termFrequency": Array [
                1,
              ],
            },
            "termFrequency": Array [
              1,
            ],
          },
          "next": Object {
            "charCode": 97,
            "firstChild": null,
            "firstDoc": Object {
              "details": Object {
                "fieldLengths": Array [
                  3,
                ],
                "key": 1,
              },
              "next": null,
              "termFrequency": Array [
                1,
              ],
            },
            "next": null,
          },
        },
      },
    },
    "firstDoc": null,
    "next": null,
  },
}
`;
